--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
